versions/v4.0.0/boards/st/stm32f3_disco/doc/index.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/boards/st/stm32f3_disco/doc/index.html
original_path: boards/st/stm32f3_disco/doc/index.html
---

# STM32F3 Discovery

Board Overview

[![../../../../_images/stm32f3_disco.jpg](https://docs.zephyrproject.org/4.0.0/_images/stm32f3_disco.jpg)
](https://docs.zephyrproject.org/4.0.0/_images/stm32f3_disco.jpg)

STM32F3 Discovery

Vendor:
:   STMicroelectronics

Architecture:
:   arm

SoC:
:   stm32f303xc

## Overview

The STM32F3DISCOVERY Discovery kit features an ARM Cortex-M4 based STM32F303VC
MCU with everything required for beginners and experienced users to get
started quickly. Here are some highlights of the STM32F3DISCOVERY board:

- STM32 microcontroller in LQFP100 package
- Extension header for all LQFP100 I/Os for quick connection to prototyping
  board and easy probing
- On-board, ST-LINK/V2 for PCB version A or B or ST-LINK/V2-B for PCB version
  C and newer, debugger/programmer with SWD connector
- Board power supply: through USB bus or from an external 3 V or 5 V supply
  voltage
- External application power supply: 3 V and 5 V
- Ten LEDs:

  > - 3.3 V power on (LD1)
  > - USB communication (LD2)
  > - Eight user LEDs: red (LD3/LD10), blue (LD4/LD9), orange (LD5/LD9)
  >   and green (LD6/LD7)
- Two push-buttons: USER and RESET
- USB USER with Mini-B connector
- L3GD20 or I3G4250D, ST MEMS motion sensor, 3-axis digital output gyroscope
- LSM303DLHC or LSM303AGR, ST MEMS system-in-package featuring a 3D digital linear
  acceleration sensor and a 3D digital magnetic sensor;

Hint

Recent PCB revisions (E and newer) are shipped with I3G4250D and LSM303AGR.

More information about the board can be found at the
[STM32F3DISCOVERY website](https://www.st.com/en/evaluation-tools/stm32f3discovery.html).

## Hardware

STM32F3DISCOVERY Discovery kit provides the following hardware components:

- STM32F303VCT6 in LQFP100 package
- ARM® 32-bit Cortex® -M4 CPU with FPU
- 72 MHz max CPU frequency
- VDD from 2.0 V to 3.6 V
- 256 KB Flash
- 40 KB SRAM
- Routine booster: 8 Kbytes of SRAM on instruction and data bus
- GPIO with external interrupt capability
- 4x12-bit ADC with 39 channels
- 2x12-bit D/A converters
- RTC
- General Purpose Timers (13)
- USART/UART (5)
- I2C (2)
- SPI (3)
- CAN
- USB 2.0 full speed interface
- Infrared transmitter
- DMA Controller

More information about STM32F303VC can be found here:
:   - [STM32F303VC on www.st.com](https://www.st.com/en/microcontrollers/stm32f303vc.html)
    - [STM32F303xC reference manual](https://www.st.com/resource/en/reference_manual/dm00043574.pdf)

### Supported Features

The Zephyr stm32f3\_disco board configuration supports the following hardware
features:

| Interface | Controller | Driver/Component |
| --- | --- | --- |
| NVIC | on-chip | nested vector interrupt controller |
| UART | on-chip | serial port-polling; serial port-interrupt |
| PINMUX | on-chip | pinmux |
| GPIO | on-chip | gpio |
| I2C | on-chip | i2c |
| SPI | on-chip | spi |
| USB | on-chip | USB device |
| CAN | on-chip | CAN |
| IWDG | on-chip | Independent WatchDoG |
| PWM | on-chip | pwm |
| ADC | on-chip | adc |
| DAC | on-chip | dac |
| DMA | on-chip | Direct Memory Access |
| die-temp | on-chip | die temperature sensor |
| RTC | on-chip | rtc |

Other hardware features are not yet supported on Zephyr porting.

The default configuration can be found in
[boards/st/stm32f3\_disco/stm32f3\_disco\_defconfig](https://github.com/zephyrproject-rtos/zephyr/blob/main/boards/st/stm32f3_disco/stm32f3_disco_defconfig)

### Pin Mapping

STM32F3DISCOVERY Discovery kit has 6 GPIO controllers. These controllers are
responsible for pin muxing, input/output, pull-up, etc.

For more details please refer to [STM32F3DISCOVERY board User Manual](https://www.st.com/resource/en/user_manual/dm00063382.pdf).

#### Default Zephyr Peripheral Mapping:

- UART\_1\_TX : PC4
- UART\_1\_RX : PC5
- UART\_2\_TX : PA2
- UART\_2\_RX : PA3
- UART\_4\_TX : PC10
- UART\_4\_RX : PC11
- I2C1\_SCL : PB6
- I2C1\_SDA : PB7
- I2C2\_SCL : PA9
- I2C2\_SDA : PA10
- SPI1\_NSS : PA4
- SPI1\_SCK : PA5
- SPI1\_MISO : PA6
- SPI1\_MOSI : PA7
- SPI2\_NSS : PB12
- SPI2\_SCK : PB13
- SPI2\_MISO : PB14
- SPI2\_MOSI : PB15
- CAN1\_RX : PD0
- CAN1\_TX : PD1
- USB\_DM : PA11
- USB\_DP : PA12
- USER\_PB : PA0
- LD3 : PE9
- LD4 : PE8
- LD5 : PE10
- LD6 : PE15
- LD7 : PE11
- LD8 : PE14
- LD9 : PE12
- LD10 : PE13
- PWM : PA8
- ADC1 : PA0
- DAC1 : PA4

### System Clock

STM32F3DISCOVERY System Clock could be driven by internal or external
oscillator, as well as main PLL clock. By default System clock is driven
by PLL clock at 72 MHz, driven by 8 MHz MCO from the ST Link.

### Serial Port

STM32F3DISCOVERY Discovery kit has up to 5 UARTs. The Zephyr console output
is assigned to UART1. Default settings are 115200 8N1.

### I2C

STM32F3DISCOVERY has up to 2 I2Cs. I2C1 is connected to the LSM303DLHC and is
an ultra-compact low-power system-in-package featuring a 3D digital linear
acceleration sensor and a 3D digital magnetic sensor.

### USB

STM32F3DISCOVERY has a USB 2.0 full-speed device interface available through
its mini USB connector (USB USER).

### CAN

The STM32F3DISCOVERY does not have an onboard CAN transceiver. In
order to use the CAN bus on the this board, an external CAN bus
transceiver must be connected to `PD0` (`CAN1_RX`) and `PD1`
(`CAN1_TX`).

## Programming and Debugging

STM32F3DISCOVERY Discovery kit includes a ST-LINK/V2 or ST-LINK/V2-B embedded
debug tool interface.

Applications for the `stm32f3_disco` board configuration can be built and
flashed in the usual way (see [Building an Application](../../../../develop/application/index.md#build-an-application) and
[Run an Application](../../../../develop/application/index.md#application-run) for more details).

### Flashing

The board is configured to be flashed using west [STM32CubeProgrammer](https://www.st.com/en/development-tools/stm32cubeprog.html) runner,
so its [installation](../../../../develop/flash_debug/host-tools.md#stm32cubeprog-flash-host-tools) is required.

Alternatively, OpenOCD or JLink can also be used to flash the board using
the `--runner` (or `-r`) option:

```shell
$ west flash --runner openocd
$ west flash --runner jlink
```

#### Flashing an application to STM32F3DISCOVERY

First, connect the STM32F3DISCOVERY Discovery kit to your host computer using
the USB port to prepare it for flashing. Then build and flash your application.

Here is an example for the [Hello World](../../../../samples/hello_world/README.md#hello_world "Print "Hello World" to the console.") application.

```shell
# From the root of the zephyr repository
west build -b stm32f3_disco samples/hello_world
west flash
```

In case you are using a recent PCB revision (E or newer), you have to use an
adapted board definition:

```shell
# From the root of the zephyr repository
west build -b stm32f3_disco@E samples/hello_world
west flash
```

Run a serial host program to connect with your board. For PCB version A or B a
TTL(3.3V) serial adapter is required. For PCB version C and newer a Virtual Com
Port (VCP) is available on the USB ST-LINK port.

```shell
$ minicom -D /dev/<tty device>
```

Replace <tty\_device> with the port where the STM32F3DISCOVERY board can be
found. For example, under Linux, /dev/ttyUSB0.

You should see the following message on the console:

```shell
Hello World! arm
```

### Debugging

You can debug an application in the usual way. Here is an example for the
[Hello World](../../../../samples/hello_world/README.md#hello_world "Print "Hello World" to the console.") application.

```shell
# From the root of the zephyr repository
west build -b stm32f3_disco samples/hello_world
west debug
```

Again you have to use the adapted command for newer PCB revisions (E and newer):

```shell
# From the root of the zephyr repository
west build -b stm32f3_disco@E samples/hello_world
west debug
```
